--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
     </section>
     <section class="status container">
-      <h2 class="section-title">ой статус</h2>
+      <h2 class="section-title">Мой статус</h2>
       <p>#выписывай!</p>
     </section>
     <section class="contacts container">
