Загрузил нормальную версию сайта курса htmlacademy

--- a/index.html
+++ b/index.html
@@ -4,38 +4,38 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Оперология</title>
+  <title>Мой сайт – Опознанный енот</title>
 </head>
 <body class="page">
   <header class="page-header">
     <div class="container">
-      <h1 class="page-title">Форум оперов</h1>
-      <p><i>Идите нахуй</i><br><a>Когда ты в тонере, тебе на все похуй</a></p>
+      <h1 class="page-title">Мой сайт</h1>
+      <p><i>По всем вопросам пишите:</i><br><a href="mailto:enot_neopoznanniy@gmail.com">enot_neopoznanniy@gmail.com</a></p>
     </div>
   </header>
   <main>
     <section class="about container">
-      <h2 class="section-title">Привет, опер</h2>
-      <img class="about-image" src="img/opera1.webp" width="147" height="147" alt="ава опера">
+      <h2 class="section-title">Привет, я Опознанный енот</h2>
+      <img class="about-image" src="img/avatar.svg" width="147" height="147" alt="Неопознанный енот">
       <div class="about-content">
-        <p>Оперский стиль - это целое искусство: машина должна быть в идеале, всегда намытая, зачастую без номеров, нередко со вспышками ФСО.</p>
-        <p>Откуда взялось название? - ответ довольно прост: зачастую Операм(Оперуполномоченным) разрешают ездить затонированными. Почему же? - ответ также прост: чтобы слиться с окружающими, зачастую молодежью, которая любит катать тачки в бункер.</p>
+        <p>Товарищи! постоянное информационно-пропагандистское обеспечение нашей деятельности обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия.</p>
+        <p>С другой стороны постоянный количественный рост и сфера нашей активности позволяет выполнять важные задания по разработке существенных финансовых и административных условий.</p>
       </div>
     </section>
     <section class="status container">
       <h2 class="section-title">Мой статус</h2>
-      <p>#выписывай!</p>
+      <p>#яжверстальщик!</p>
     </section>
     <section class="contacts container">
       <h2 class="section-title">Контакты для связи</h2>
-        <p class="contacts-name"></p>
-        <p><i>Вконтакте:</i> <a href="https://vk.com/id251467492">Шумаков Глеб</a></p>
-        <p><i>телефон:</i> <a>+79090000009</a></p>
+        <p class="contacts-name">Опознанный енот</p>
+        <p><i>email:</i> <a href="mailto:enot_neopoznanniy@gmail.com">enot_neopoznanniy@gmail.com</a></p>
+        <p><i>телефон:</i> <a href="tel:+79876543210">+79876543210</a></p>
     </section>
   </main>
   <footer class="page-footer">
     <div class="container">
-      <p>© Министерство оперов</p>
+      <p>© Опознанный енот</p>
       <p>2020</p>
     </div>
   </footer>
